[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/characters/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/enemies/fly_robot.gd" type="Script" id=2]
[ext_resource path="res://resources/characters/enemies/fly_robot_masks.tres" type="SpriteFrames" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

//The palette used
uniform sampler2D palette;
//how many horizontal pixels has the palette
uniform float palette_size;
//Mask for wich color use from palette
uniform sampler2D mask;

void fragment() {
	vec4 mask_color = texture(mask,UV);
	vec4 output = texture(TEXTURE,UV);
	if(mask_color.r != 1.0)
	{
		highp float color_r = mask_color.r;
		//If an inconsistency appears between Intel and Amd/Nvidia, feel free to fix it and commit, but take this as a warning for production use
		output = texture(palette,vec2((color_r*255.0+0.5)/255.0,0.0));
	}
	COLOR.rgba = output;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/palette_size = 8.0

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 1 )
shader_param/palette_size = 8.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 18 )

[node name="FlyRobot" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_hp_bar_position = Vector2( 14, -11 )
hp_max = 14.0
masks = ExtResource( 3 )
acceleration = 0.0
move_speed = 200.0
rotate_towards_destination = true
follow_max_distance = 250.0
damage = 6.0

[node name="SprBody" type="Sprite" parent="." index="5"]
material = SubResource( 4 )
z_index = -1

[node name="SprPropeller" type="Sprite" parent="." index="6"]
material = SubResource( 5 )

[node name="AnimBody" type="AnimatedSprite" parent="." index="7"]
visible = false
z_index = -1
frames = ExtResource( 3 )
animation = "body"
frame = 2
playing = true

[node name="AnimPropeller" type="AnimatedSprite" parent="." index="8"]
visible = false
frames = ExtResource( 3 )
animation = "propeller"
frame = 1
playing = true

[node name="CollisionBox" type="CollisionShape2D" parent="." index="9"]
position = Vector2( -0.5, 1 )
shape = SubResource( 3 )
